samples/_failures_safe/1761409843_95d13a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1a1ac74.c: In function ‘main’:
./samples/SAFE/__tmp_b1a1ac74.c:176:9: error: expected declaration or statement at end of input
  176 |         free_matrix(mat1);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_b1a1ac74.c:176:9: error: expected declaration or statement at end of input
